--- a/sass/block-related-styles/_nav.scss
+++ b/sass/block-related-styles/_nav.scss
@@ -12,24 +12,25 @@ nav {
         }
     
         li {
-            background-color: $color-primary;
-            border-radius: $border-radius;
-            width: 155px;
-            padding: 13px 10px 10px 10px;
             margin: 5px 10px;
             text-align: center;
             font-size: 18px;
         }
-
-        li:hover, a:hover {
-            background-color: $color-primary-alt;
-            color: $color-secondary;
-        }
     
         a {
-            padding: 15px;
+            display: inline-block;
+            width: 155px;
+            height: 45px;
+            background-color: $color-primary;
+            border-radius: $border-radius;
             text-decoration: none;
             color: $color-secondary-alt;
+            line-height: 45px;
+        }
+
+        a:hover {
+            background-color: $color-primary-alt;
+            color: $color-secondary;
         }
     }
 }
